// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarField> should render component with custom extensions 1`] = `
<div>
  <div
    class="avatar-field"
  >
    <label
      class="avatar-field__content"
    >
      <input
        accept="image/*"
        class="file-input avatar-field__input"
        data-testid="file-input"
        name="file"
        title="Foto de perfil"
        type="file"
      />
      <div
        class="avatar-field__overlay"
      >
        <span
          class="icon"
          data-name="camera"
          data-testid="camera"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
            />
            <circle
              cx="12"
              cy="13"
              r="4"
            />
          </svg>
        </span>
        <p
          class="text text--size-sm"
        >
          Adicionar foto
        </p>
      </div>
    </label>
    <span
      class="caption avatar-field__caption"
      data-testid="avatar-field-caption"
    >
      Arquivos *.jpg, *.jpeg
      <br />
      Tamanho máximo 1 MB
    </span>
  </div>
</div>
`;

exports[`<AvatarField> should render component with custom max file size 1`] = `
<div>
  <div
    class="avatar-field"
  >
    <label
      class="avatar-field__content"
    >
      <input
        accept="image/*"
        class="file-input avatar-field__input"
        data-testid="file-input"
        name="file"
        title="Foto de perfil"
        type="file"
      />
      <div
        class="avatar-field__overlay"
      >
        <span
          class="icon"
          data-name="camera"
          data-testid="camera"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
            />
            <circle
              cx="12"
              cy="13"
              r="4"
            />
          </svg>
        </span>
        <p
          class="text text--size-sm"
        >
          Adicionar foto
        </p>
      </div>
    </label>
    <span
      class="caption avatar-field__caption"
      data-testid="avatar-field-caption"
    >
      Arquivos *.jpg, *.jpeg, *.png
      <br />
      Tamanho máximo 10 MB
    </span>
  </div>
</div>
`;

exports[`<AvatarField> should render component with default props 1`] = `
<div>
  <div
    class="avatar-field"
  >
    <label
      class="avatar-field__content"
    >
      <input
        accept="image/*"
        class="file-input avatar-field__input"
        data-testid="file-input"
        name="file"
        title="Foto de perfil"
        type="file"
      />
      <div
        class="avatar-field__overlay"
      >
        <span
          class="icon"
          data-name="camera"
          data-testid="camera"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"
            />
            <circle
              cx="12"
              cy="13"
              r="4"
            />
          </svg>
        </span>
        <p
          class="text text--size-sm"
        >
          Adicionar foto
        </p>
      </div>
    </label>
    <span
      class="caption avatar-field__caption"
      data-testid="avatar-field-caption"
    >
      Arquivos *.jpg, *.jpeg, *.png
      <br />
      Tamanho máximo 1 MB
    </span>
  </div>
</div>
`;
